--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "node-ws-test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/hpssjellis/node-ws-test.git"
   },
   "dependencies": {
-    "express": "^4.4.5",
-    "ws": "0.4.x"
+    "express": "4.14.0",
+    "ws": "0.4.32"
   },
   "engines": {
     "node": "0.10.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.html"
   }
 }
